--- a/packages/zircon-energy/package.json
+++ b/packages/zircon-energy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zircon-energy",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha.5",
   "description": "Energy Contracts",
   "engines": {
     "node": ">=10"
@@ -31,7 +31,8 @@
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "dotenv": "^10.0.0",
-    "hardhat-watcher": "^2.1.1"
+    "hardhat-watcher": "^2.1.1",
+    "zircon-protocol": "^1.0.3-alpha.0"
   },
   "scripts": {
     "deploy": "npx hardhat run --network moonbase scripts/deploy-script.js",
