--- a/package.json
+++ b/package.json
@@ -1,7 +1,25 @@
 {
   "name": "root",
   "private": true,
+  "workspaces": {
+    "packages": [
+      "packages/*"
+    ]
+  },
   "devDependencies": {
-    "lerna": "^4.0.0"
+    "lerna": "^4.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "chai": "*",
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.5.1",
+    "hardhat": "^2.6.8",
+    "hardhat-contract-sizer": "^2.3.0",
+    "hardhat-dependency-compiler": "^1.1.2",
+    "mocha": "*"
+  },
+  "scripts": {
+    "test": "lerna exec -- mocha",
+    "compile": "lerna exec -- npx hardhat compile"
   }
 }
