--- a/packages/zircon-core/package.json
+++ b/packages/zircon-core/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@zircon/energy",
+  "name": "@zircon/core",
   "version": "1.0.0",
-  "description": "Energy Contracts",
+  "description": "Core Contracts",
   "engines": {
     "node": ">=10"
   },
@@ -23,6 +23,7 @@
     "ethers": "^5.5.1",
     "hardhat": "^2.6.8",
     "hardhat-contract-sizer": "^2.3.0",
+    "hardhat-dependency-compiler": "^1.1.2",
     "mocha": "*"
   },
   "dependencies": {
@@ -32,7 +33,7 @@
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "dotenv": "^10.0.0",
     "hardhat-watcher": "^2.1.1",
-    "zircon-protocol": "^1.0.3-alpha.0"
+    "zircon-energy": "^1.0.0-alpha.6"
   },
   "scripts": {
     "deploy": "npx hardhat run --network moonbase scripts/deploy-script.js",
