--- a/packages/zircon-core/package.json
+++ b/packages/zircon-core/package.json
@@ -38,6 +38,7 @@
   "scripts": {
     "deploy": "npx hardhat run --network moonbase scripts/deploy-script.js",
     "test": "mocha",
+    "compile": "npx hardhat compile --show-stack-traces",
     "ctest": "npx hardhat compile && npm test"
   }
 }
