--- a/packages/zircon-farming/package.json
+++ b/packages/zircon-farming/package.json
@@ -16,7 +16,7 @@
     "mocha": "*"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "3.2.0",
+    "@openzeppelin/contracts": "^4.4.2",
     "dotenv": "^10.0.0",
     "hardhat-watcher": "^2.1.1",
     "solidity-docgen": "^0.6.0-beta.10"
