--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     ]
   },
   "devDependencies": {
-    "lerna": "^4.0.0",
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "chai": "*",
     "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.5.1",
+    "ethers": "^5.6.8",
     "hardhat": "^2.6.8",
     "hardhat-contract-sizer": "^2.3.0",
     "hardhat-dependency-compiler": "^1.1.2",
+    "hardhat-deploy": "^0.11.10",
+    "lerna": "^4.0.0",
     "mocha": "*"
   },
   "scripts": {
