--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "chai": "*",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.6.8",
-    "hardhat": "^2.6.8",
     "hardhat-contract-sizer": "^2.3.0",
     "hardhat-dependency-compiler": "^1.1.2",
     "hardhat-deploy": "^0.11.10",
@@ -24,5 +23,9 @@
     "ctest": "yarn workspaces run ctest",
     "compile": "yarn workspaces run compile",
     "deploy": "yarn workspaces run deploy"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.1",
+    "yarn": "^1.22.19"
   }
 }
