--- a/packages/zircon-core/package.json
+++ b/packages/zircon-core/package.json
@@ -21,8 +21,8 @@
     "chai": "*",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.1",
-    "hardhat": "^2.6.8",
-    "hardhat-abi-exporter": "../../hardhat-abi-exporter",
+    "hardhat": "^2.9.9",
+    "hardhat-abi-exporter": "^2.9.0",
     "hardhat-contract-sizer": "^2.3.0",
     "hardhat-dependency-compiler": "^1.1.2",
     "mocha": "*"
