--- a/packages/zircon-core/package.json
+++ b/packages/zircon-core/package.json
@@ -22,7 +22,7 @@
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.1",
     "hardhat": "^2.6.8",
-    "hardhat-abi-exporter": "../../hardhat-abi-exporter",
+    "hardhat-abi-exporter": "https://github.com/VittoriDavide/hardhat-abi-exporter",
     "hardhat-contract-sizer": "^2.3.0",
     "hardhat-dependency-compiler": "^1.1.2",
     "mocha": "*"
