--- a/packages/zircon-farming/package.json
+++ b/packages/zircon-farming/package.json
@@ -17,10 +17,10 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.4.2",
+    "@openzeppelin/test-helpers": "^0.5.15",
     "dotenv": "^10.0.0",
     "hardhat-watcher": "^2.1.1",
     "solidity-docgen": "^0.6.0-beta.10"
-
   },
   "scripts": {
     "deploy": "npx hardhat --network moonbase deploy",
