--- a/packages/zircon-periphery/package.json
+++ b/packages/zircon-periphery/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@zircon/periphery",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha.0",
   "description": "Core Contracts",
   "engines": {
     "node": ">=10"
@@ -38,6 +38,7 @@
     "deploy": "npx hardhat --network moonbase deploy",
     "test": "mocha",
     "compile": "npx hardhat compile",
-    "ctest": "npx hardhat compile && npm test"
+    "ctest": "npx hardhat compile && npm test",
+    "testScript": "npx hardhat run --network moonbase scripts/add-pair.js"
   }
 }
