--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,10 @@ crashlytics.properties
 crashlytics-build.properties
 fabric.properties
 
+#core_contracts
+
+**/core_contracts/
+
 # Editor-based Rest Client
 .idea/httpRequests
 
