--- a/packages/zircon-core/package.json
+++ b/packages/zircon-core/package.json
@@ -37,7 +37,7 @@
     "solidity-docgen": "^0.6.0-beta.10"
   },
   "scripts": {
-    "deploy": "npx hardhat --network localhost deploy --export-all ../zircon-periphery/external_contracts/hardhat_contracts.json",
+    "deploy": "npx hardhat --network moonbase deploy --export-all ../zircon-periphery/external_contracts/hardhat_contracts.json",
     "test": "mocha",
     "compile": "npx hardhat compile --show-stack-traces",
     "ctest": "npx hardhat compile && npm test"
