--- a/packages/zircon-core/package.json
+++ b/packages/zircon-core/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@openzeppelin/hardhat-upgrades": "^1.19.0",
     "chai": "*",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.1",
