--- a/packages/zircon-farming/package.json
+++ b/packages/zircon-farming/package.json
@@ -13,6 +13,7 @@
     "hardhat": "^2.6.8",
     "hardhat-contract-sizer": "^2.3.0",
     "hardhat-dependency-compiler": "^1.1.2",
+    "hardhat-gas-reporter": "^1.0.8",
     "mocha": "*"
   },
   "dependencies": {
@@ -24,7 +25,7 @@
   },
   "scripts": {
     "deploy": "npx hardhat --network moonbase deploy",
-    "test": "mocha",
+    "test": "npx hardhat test",
     "compile": "npx hardhat compile --show-stack-traces",
     "ctest": "npx hardhat compile && npm test",
     "testScript": "npx hardhat run --network moonbase scripts/deploy-script.js"
