--- a/packages/zircon-farming/package.json
+++ b/packages/zircon-farming/package.json
@@ -24,7 +24,7 @@
     "solidity-docgen": "^0.6.0-beta.10"
   },
   "scripts": {
-    "deploy": "npx hardhat --network moonbase deploy",
+    "deploy": "npx hardhat --network moonbase deploy --export-all ../zircon-periphery/external_contracts/farming_contracts.json",
     "test": "npx hardhat test",
     "compile": "npx hardhat compile --show-stack-traces",
     "ctest": "npx hardhat compile && npm test",
