--- a/packages/zircon-core/package.json
+++ b/packages/zircon-core/package.json
@@ -40,7 +40,8 @@
     "solidity-docgen": "^0.6.0-beta.10"
   },
   "scripts": {
-    "deploy": "npx hardhat --network moonbase deploy --export-all ../zircon-periphery/external_contracts/core_contracts.json",
+    "deploy:moonbase": "npx hardhat --network moonbase deploy --export-all ../zircon-periphery/external_contracts/core_contracts.json",
+    "deploy:moonriver": "npx hardhat --network  moonriver deploy --reset --export-all ../zircon-periphery/external_contracts/core_contracts.json",
     "test": "npx hardhat test",
     "compile": "npx hardhat compile --show-stack-traces",
     "ctest": "npx hardhat compile && npm test",
