--- a/packages/zircon-farming/package.json
+++ b/packages/zircon-farming/package.json
@@ -17,6 +17,7 @@
     "mocha": "*"
   },
   "dependencies": {
+    "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@openzeppelin/contracts": "^4.4.2",
     "@openzeppelin/test-helpers": "^0.5.15",
     "dotenv": "^10.0.0",
