--- a/packages/zircon-token/package.json
+++ b/packages/zircon-token/package.json
@@ -16,24 +16,28 @@
     "contracts"
   ],
   "devDependencies": {
+    "@boringcrypto/boring-solidity": "git+https://github.com/boringcrypto/BoringSolidity.git",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-etherscan": "^3.0.1",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "chai": "*",
+    "@openzeppelin/contracts": "^4.2.0",
+    "@types/mocha": "^8.2.1",
+    "@types/node": "^14.14.31",
+    "chai": "^4.3.4",
+    "dotenv": "^10.0.0",
     "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.5.1",
-    "hardhat": "^2.6.8",
-    "hardhat-contract-sizer": "^2.3.0",
-    "hardhat-dependency-compiler": "^1.1.2",
-    "hardhat-gas-reporter": "^1.0.8",
-    "mocha": "*"
+    "ethers": "^5.4.6",
+    "hardhat": "^2.5.0",
+    "hardhat-deploy": "^0.8.11",
+    "hardhat-deploy-ethers": "^0.3.0-beta.10"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "2.5.0",
-    "@uniswap/lib": "^4.0.1-alpha",
-    "@uniswap/v2-core": "^1.0.1",
-    "@uniswap/v2-periphery": "^1.1.0-beta.0",
-    "dotenv": "^10.0.0",
-    "hardhat-watcher": "^2.1.1"
+    "@openzeppelin/contracts-upgradeable": "^4.4.2",
+    "axios": "^0.24.0",
+    "csv-writer": "^1.6.0",
+    "ethereumjs-util": "^7.1.3",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1"
   },
   "scripts": {
     "deploy:moonbase": "npx hardhat --network moonbase deploy --reset",
