--- a/packages/zircon-core/package.json
+++ b/packages/zircon-core/package.json
@@ -47,6 +47,7 @@
     "compile": "npx hardhat compile --show-stack-traces",
     "ctest": "npx hardhat compile && npm test",
     "bytecode": "npx hardhat run scripts/get-bytecodes.js",
-    "testScript": "npx hardhat run --network moonbase scripts/migrate.js"
+    "migrate:moonbase": "npx hardhat run --network moonbase scripts/migrate.js",
+    "migrate:moonriver": "npx hardhat run --network moonriver scripts/migrate.js"
   }
 }
