--- a/packages/zircon-farming/package.json
+++ b/packages/zircon-farming/package.json
@@ -31,7 +31,9 @@
     "compile": "npx hardhat compile --show-stack-traces",
     "ctest": "npx hardhat compile && npm test",
     "deployPools:moonbase": "npx hardhat run --network moonbase scripts/deploy-script.js",
-    "deployPools:moonriver": "npx hardhat run --network moonriver scripts/deploy-script.js"
+    "deployPools:moonriver": "npx hardhat run --network moonriver scripts/deploy-script.js",
+    "update:moonbase": "npx hardhat run --network moonbase scripts/updatePylon.js",
+    "update:moonriver": "npx hardhat run --network moonriver scripts/updatePylon.js"
   },
   "files": [
     "artifacts",
