--- a/packages/zircon-core/package.json
+++ b/packages/zircon-core/package.json
@@ -56,6 +56,8 @@
     "check:moonriver": "npx hardhat run --network moonriver scripts/help.js",
     "check:moonbase": "npx hardhat run --network moonbase scripts/help.js",
     "fees:moonbase": "npx hardhat run --network moonbase scripts/change-fees.js",
-    "fees:moonriver": "npx hardhat run --network moonriver scripts/change-fees.js"
+    "fees:moonriver": "npx hardhat run --network moonriver scripts/change-fees.js",
+    "add:moonbase": "npx hardhat run --network moonbase scripts/add-pair.js",
+    "add:moonriver": "npx hardhat run --network moonriver scripts/add-pair.js"
   }
 }
