--- a/packages/zircon-core/package.json
+++ b/packages/zircon-core/package.json
@@ -31,7 +31,7 @@
   },
   "dependencies": {
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
-    "@openzeppelin/contracts": "2.5.0",
+    "@openzeppelin/contracts": "^4.4.2",
     "@uniswap/lib": "^4.0.1-alpha",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
