--- a/packages/zircon-core/package.json
+++ b/packages/zircon-core/package.json
@@ -45,8 +45,9 @@
     "deploy:moonriver": "npx hardhat --network  moonriver deploy --reset --export-all ../zircon-periphery/external_contracts/core_contracts.json",
     "test": "npx hardhat test",
     "compile": "npx hardhat compile --show-stack-traces",
-    "ctest": "npx hardhat compile && npm test",
-    "bytecode": "npx hardhat run scripts/get-bytecodes.js",
+    "ctest": "npx hardhat run scripts/get-bytecodes.js && npx hardhat compile && npm test",
+    "bytecode:moonriver": "npx hardhat run --network moonriver scripts/get-bytecodes.js",
+    "bytecode:moonbase": "npx hardhat run --network moonbase scripts/get-bytecodes.js",
     "migrate:moonbase": "npx hardhat run --network moonbase scripts/migrate.js",
     "migrate:moonriver": "npx hardhat run --network moonriver scripts/migrate.js",
     "pause:moonriver": "npx hardhat run --network moonriver scripts/pause.js",
