revenue check script

--- a/packages/zircon-core/package.json
+++ b/packages/zircon-core/package.json
@@ -59,6 +59,7 @@
     "fees:moonbase": "npx hardhat run --network moonbase scripts/change-fees.js",
     "fees:moonriver": "npx hardhat run --network moonriver scripts/change-fees.js",
     "add:moonbase": "npx hardhat run --network moonbase scripts/add-pair.js",
-    "add:moonriver": "npx hardhat run --network moonriver scripts/add-pair.js"
+    "add:moonriver": "npx hardhat run --network moonriver scripts/add-pair.js",
+    "revcheck": "npx hardhat run --network moonriver scripts/rev-check.js"
   }
 }
