--- a/packages/zircon-core/package.json
+++ b/packages/zircon-core/package.json
@@ -43,6 +43,7 @@
   "scripts": {
     "deploy:moonbase": "npx hardhat --network moonbase deploy --reset --export-all ../zircon-periphery/external_contracts/core_contracts.json",
     "deploy:moonriver": "npx hardhat --network  moonriver deploy --reset --export-all ../zircon-periphery/external_contracts/core_contracts.json",
+    "deploy:bsc": "npx hardhat --network bsc deploy --reset --export-all ../zircon-periphery/external_contracts/core_contracts.json",
     "test": "npx hardhat test",
     "compile": "npx hardhat compile --show-stack-traces",
     "ctest": "npx hardhat run scripts/get-bytecodes.js && npx hardhat compile && npm test",
