--- a/packages/zircon-core/package.json
+++ b/packages/zircon-core/package.json
@@ -50,6 +50,7 @@
     "bytecode": "npx hardhat run scripts/get-bytecodes.js",
     "check:bsc": "npx hardhat run --network bsc scripts/add-pair.js",
     "migrate:moonbase": "npx hardhat --network moonbase run scripts/migrate.js",
-    "migrate:moonriver": "npx hardhat --network moonriver run scripts/migrate.js"
+    "migrate:moonriver": "npx hardhat --network moonriver run scripts/migrate.js",
+    "pause:moonriver": "npx hardhat --network moonriver run scripts/pause.js"
   }
 }
