--- a/packages/zircon-core/package.json
+++ b/packages/zircon-core/package.json
@@ -51,6 +51,8 @@
     "check:bsc": "npx hardhat run --network bsc scripts/add-pair.js",
     "migrate:moonbase": "npx hardhat --network moonbase run scripts/migrate.js",
     "migrate:moonriver": "npx hardhat --network moonriver run scripts/migrate.js",
-    "pause:moonriver": "npx hardhat --network moonriver run scripts/pause.js"
+    "pause:moonriver": "npx hardhat --network moonriver run scripts/pause.js",
+    "help:moonriver": "npx hardhat --network moonriver run scripts/help.js",
+    "chMigrator:moonriver": "npx hardhat --network moonriver run scripts/change-migrator.js"
   }
 }
