--- a/packages/zircon-token/package.json
+++ b/packages/zircon-token/package.json
@@ -45,6 +45,7 @@
     "test": "npx hardhat test",
     "compile": "npx hardhat compile",
     "ctest": "npx hardhat compile && npm test",
-    "testScript": "npx hardhat run --network moonbase scripts/add-pair.js"
+    "testScript": "npx hardhat run --network moonbase scripts/add-pair.js",
+    "send:moonriver": "npx hardhat run --network moonriver script/send-tokens.js"
   }
 }
