--- a/packages/zircon-core/package.json
+++ b/packages/zircon-core/package.json
@@ -41,8 +41,8 @@
     "solidity-docgen": "^0.6.0-beta.10"
   },
   "scripts": {
-    "deploy:moonbase": "npx hardhat --network moonbase deploy --reset --export-all ../zircon-periphery/external_contracts/core_contracts.json",
-    "deploy:moonriver": "npx hardhat --network  moonriver deploy --reset --export-all ../zircon-periphery/external_contracts/core_contracts.json",
+    "deploy:moonbase": "yarn bytecode:moonbase && npx hardhat --network moonbase deploy --reset --export-all ../zircon-periphery/external_contracts/core_contracts.json",
+    "deploy:moonriver": "yarn bytecode:moonriver && npx hardhat --network  moonriver deploy --reset --export-all ../zircon-periphery/external_contracts/core_contracts.json",
     "deploy:bsc": "npx hardhat --network bsc deploy --reset --export-all ../zircon-periphery/external_contracts/core_contracts.json",
     "test": "npx hardhat test",
     "compile": "npx hardhat compile --show-stack-traces",
