--- a/packages/zircon-core/package.json
+++ b/packages/zircon-core/package.json
@@ -35,13 +35,15 @@
     "@uniswap/lib": "^4.0.1-alpha",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
+    "axios": "^1.2.1",
     "dotenv": "^10.0.0",
     "hardhat-gas-reporter": "^1.0.8",
     "hardhat-watcher": "^2.1.1",
+    "node-fetch": "^3.3.0",
     "solidity-docgen": "^0.6.0-beta.10"
   },
   "scripts": {
-    "deploy:moonbase": "npx hardhat --network moonbase deploy --export-all ../zircon-periphery/external_contracts/core_contracts.json",
+    "deploy:moonbase": "npx hardhat --network moonbase deploy --reset --export-all ../zircon-periphery/external_contracts/core_contracts.json",
     "deploy:moonriver": "npx hardhat --network  moonriver deploy --reset --export-all ../zircon-periphery/external_contracts/core_contracts.json",
     "deploy:bsc": "npx hardhat --network bsc deploy --reset --export-all ../zircon-periphery/external_contracts/core_contracts.json",
     "test": "npx hardhat test",
@@ -53,6 +55,7 @@
     "migrate:moonriver": "npx hardhat --network moonriver run scripts/migrate.js",
     "pause:moonriver": "npx hardhat --network moonriver run scripts/pause.js",
     "help:moonriver": "npx hardhat --network moonriver run scripts/help.js",
-    "chMigrator:moonriver": "npx hardhat --network moonriver run scripts/change-migrator.js"
+    "chMigrator:moonriver": "npx hardhat --network moonriver run scripts/change-migrator.js",
+    "createTest:moonbase": "npx hardhat --network moonbase run scripts/creating-test.js"
   }
 }
