--- a/packages/zircon-core/package.json
+++ b/packages/zircon-core/package.json
@@ -36,6 +36,7 @@
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "dotenv": "^10.0.0",
+    "hardhat": "^2.12.4",
     "hardhat-gas-reporter": "^1.0.8",
     "hardhat-watcher": "^2.1.1",
     "solidity-docgen": "^0.6.0-beta.10"
