--- a/packages/zircon-core/package.json
+++ b/packages/zircon-core/package.json
@@ -38,6 +38,7 @@
     "hardhat-contract-sizer": "^2.6.1",
     "hardhat-gas-reporter": "^1.0.8",
     "hardhat-watcher": "^2.1.1",
+    "seedrandom": "^3.0.5",
     "solidity-docgen": "^0.6.0-beta.10"
   },
   "scripts": {
