adding another testnet

--- a/packages/zircon-core/package.json
+++ b/packages/zircon-core/package.json
@@ -42,9 +42,10 @@
     "solidity-docgen": "^0.6.0-beta.10"
   },
   "scripts": {
-    "deploy:moonbase": "npx hardhat --network moonbase deploy --reset --export-all ../zircon-periphery/external_contracts/core_contracts.json",
-    "deploy:moonriver": "npx hardhat --network  moonriver deploy --reset --export-all ../zircon-periphery/external_contracts/core_contracts.json",
+    "deploy:moonbase": "npx hardhat run --network moonbase scripts/get-bytecodes.js && npx hardhat --network moonbase deploy --reset --export-all ../zircon-periphery/external_contracts/core_contracts.json",
+    "deploy:moonriver": "npx hardhat run --network moonriver scripts/get-bytecodes.js && npx hardhat --network  moonriver deploy --reset --export-all ../zircon-periphery/external_contracts/core_contracts.json",
     "deploy:bsc": "npx hardhat --network bsc deploy --reset --export-all ../zircon-periphery/external_contracts/core_contracts.json",
+    "deploy:bscTest": "npx hardhat --network bscTest deploy --reset --export-all ../zircon-periphery/external_contracts/core_contracts.json",
     "test": "npx hardhat test",
     "compile": "npx hardhat compile --show-stack-traces",
     "ctest": "npx hardhat run scripts/get-bytecodes.js && npx hardhat compile && npm test",
@@ -62,6 +63,8 @@
     "fees:moonriver": "npx hardhat run --network moonriver scripts/change-fees.js",
     "add:moonbase": "npx hardhat run --network moonbase scripts/add-pair.js",
     "add:moonriver": "npx hardhat run --network moonriver scripts/add-pair.js",
+    "testCreate:moobase": "npx hardhat run --network moonbase scripts/creating-test.js",
+    "testCreate:bscTest": "npx hardhat run --network bscTest scripts/creating-test.js",
     "revcheck": "npx hardhat run --network moonriver scripts/rev-check.js"
   },
   "jest": {
