--- a/packages/zircon-farming/package.json
+++ b/packages/zircon-farming/package.json
@@ -28,6 +28,7 @@
     "deploy:moonbase": "npx hardhat --network moonbase deploy --export-all ../zircon-periphery/external_contracts/farming_contracts.json",
     "deploy:moonriver": "npx hardhat --network moonriver deploy --export-all ../zircon-periphery/external_contracts/farming_contracts.json",
     "deploy:bscTest": "npx hardhat --network bscTest deploy --export-all ../zircon-periphery/external_contracts/farming_contracts.json",
+    "deploy:arbGoerly": "npx hardhat --network arbGoerly deploy --export-all ../zircon-periphery/external_contracts/farming_contracts.json",
     "deploy:bsc": "npx hardhat --network bsc deploy --export-all ../zircon-periphery/external_contracts/farming_contracts.json",
     "test": "npx hardhat test",
     "compile": "npx hardhat compile --show-stack-traces",
