--- a/packages/zircon-core/package.json
+++ b/packages/zircon-core/package.json
@@ -46,13 +46,14 @@
     "deploy:moonbase": "npx hardhat run --network moonbase scripts/get-bytecodes.js && npx hardhat --network moonbase deploy --reset --export-all ../zircon-periphery/external_contracts/core_contracts.json",
     "deploy:moonriver": "npx hardhat run --network moonriver scripts/get-bytecodes.js && npx hardhat --network  moonriver deploy --reset --export-all ../zircon-periphery/external_contracts/core_contracts.json",
     "deploy:bsc": "npx hardhat --network bsc deploy --reset --export-all ../zircon-periphery/external_contracts/core_contracts.json",
-    "deploy:bscTest": "npx hardhat run --network moonbase scripts/get-bytecodes.js && npx hardhat --network bscTest deploy --reset --export-all ../zircon-periphery/external_contracts/core_contracts.json",
-    "deploy:arbGoerly": "npx hardhat --network arbGoerly deploy --reset --export-all ../zircon-periphery/external_contracts/core_contracts.json",
+    "deploy:bscTest": "npx hardhat run --network bscTest scripts/get-bytecodes.js && npx hardhat --network bscTest deploy --reset --export-all ../zircon-periphery/external_contracts/core_contracts.json",
+    "deploy:arbGoerly": "npx hardhat run --network arbGoerly scripts/get-bytecodes.js && npx hardhat --network arbGoerly deploy --reset --export-all ../zircon-periphery/external_contracts/core_contracts.json",
     "test": "npx hardhat test",
     "compile": "npx hardhat compile --show-stack-traces",
     "ctest": "npx hardhat run scripts/get-bytecodes.js && npx hardhat compile && npm test",
     "bytecode:moonriver": "npx hardhat run --network moonriver scripts/get-bytecodes.js",
     "bytecode:moonbase": "npx hardhat run --network moonbase scripts/get-bytecodes.js",
+    "bytecode:bscTest": "npx hardhat run --network bscTest scripts/get-bytecodes.js",
     "migrate:moonbase": "npx hardhat run --network moonbase scripts/migrate.js",
     "migrate:moonriver": "npx hardhat run --network moonriver scripts/migrate.js",
     "pause:moonriver": "npx hardhat run --network moonriver scripts/pause.js",
@@ -67,6 +68,7 @@
     "add:moonriver": "npx hardhat run --network moonriver scripts/add-pair.js",
     "testCreate:moonbase": "npx hardhat run --network moonbase scripts/creating-test.js",
     "testCreate:bscTest": "npx hardhat run --network bscTest scripts/creating-test.js",
+    "testCreate:arbGoerly": "npx hardhat run --network arbGoerly scripts/creating-test.js",
     "revcheck": "npx hardhat run --network moonriver scripts/rev-check.js"
   },
   "jest": {
