--- a/packages/zircon-core/package.json
+++ b/packages/zircon-core/package.json
@@ -40,7 +40,8 @@
     "hardhat-gas-reporter": "^1.0.8",
     "hardhat-watcher": "^2.1.1",
     "seedrandom": "^3.0.5",
-    "solidity-docgen": "^0.6.0-beta.10"
+    "solidity-docgen": "^0.6.0-beta.10",
+    "bignumber.js": "^9.1.0"
   },
   "scripts": {
     "deploy:moonbase": "npx hardhat run --network moonbase scripts/get-bytecodes.js && npx hardhat --network moonbase deploy --reset --export-all ../zircon-periphery/external_contracts/core_contracts.json",
