--- a/packages/zircon-core/package.json
+++ b/packages/zircon-core/package.json
@@ -55,6 +55,7 @@
     "bytecode:moonriver": "npx hardhat run --network moonriver scripts/get-bytecodes.js",
     "bytecode:moonbase": "npx hardhat run --network moonbase scripts/get-bytecodes.js",
     "bytecode:bscTest": "npx hardhat run --network bscTest scripts/get-bytecodes.js",
+    "bytecode:bsc": "npx hardhat run --network bsc scripts/get-bytecodes.js",
     "migrate:moonbase": "npx hardhat run --network moonbase scripts/migrate.js",
     "migrate:moonriver": "npx hardhat run --network moonriver scripts/migrate.js",
     "pause:moonriver": "npx hardhat run --network moonriver scripts/pause.js",
@@ -63,6 +64,7 @@
     "changeMigrator:moonbase": "npx hardhat run --network moonbase scripts/change-migrator.js",
     "check:moonriver": "npx hardhat run --network moonriver scripts/help.js",
     "check:moonbase": "npx hardhat run --network moonbase scripts/help.js",
+    "check:bsc": "npx hardhat run --network bsc scripts/help.js",
     "fees:moonbase": "npx hardhat run --network moonbase scripts/change-fees.js",
     "fees:moonriver": "npx hardhat run --network moonriver scripts/change-fees.js",
     "add:moonbase": "npx hardhat run --network moonbase scripts/add-pair.js",
