change fees for bsc

--- a/packages/zircon-core/package.json
+++ b/packages/zircon-core/package.json
@@ -68,6 +68,7 @@
     "check:bsc": "npx hardhat run --network bsc scripts/help.js",
     "fees:moonbase": "npx hardhat run --network moonbase scripts/change-fees.js",
     "fees:moonriver": "npx hardhat run --network moonriver scripts/change-fees.js",
+    "fees:bsc": "npx hardhat run --network bsc scripts/change-fees.js",
     "add:moonbase": "npx hardhat run --network moonbase scripts/add-pair.js",
     "sendTokens:moonbase": "npx hardhat run --network moonbase scripts/send-tokens.js",
     "sendTokens:arbGoerly": "npx hardhat run --network arbGoerly scripts/send-tokens.js",
