--- a/packages/zircon-core/package.json
+++ b/packages/zircon-core/package.json
@@ -58,6 +58,7 @@
     "bytecode:moonbase": "npx hardhat run --network moonbase scripts/get-bytecodes.js",
     "bytecode:bscTest": "npx hardhat run --network bscTest scripts/get-bytecodes.js",
     "bytecode:bsc": "npx hardhat run --network bsc scripts/get-bytecodes.js",
+    "bytecode:arbitrum": "npx hardhat run --network arbitrum scripts/get-bytecodes.js",
     "migrate:moonbase": "npx hardhat run --network moonbase scripts/migrate.js",
     "migrate:moonriver": "npx hardhat run --network moonriver scripts/migrate.js",
     "pause:moonriver": "npx hardhat run --network moonriver scripts/pause.js",
