scripts and more

--- a/packages/zircon-core/package.json
+++ b/packages/zircon-core/package.json
@@ -34,7 +34,9 @@
     "@uniswap/lib": "^4.0.1-alpha",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
+    "aws-sdk": "^2.1347.0",
     "bignumber.js": "^9.1.0",
+    "csv-parser": "^3.0.0",
     "csv-stringify": "^6.3.0",
     "csv-writer": "^1.6.0",
     "dotenv": "^10.0.0",
